# formdt

./: .formdt  .gitignore  AGENTS.md  CHANGELOG.md  README.md  main.py  pyproject.toml  test_image.md
.github/workflows/: ci.yml
formdt/: cli.py  config.py  formatter.py  notebook.py
src/formdt/: __init__.py  cli.py  config.py  formatter.py
tests/: test_config.py  test_formatter.py  test_notebook.py
