[project]
name = "formdt"
version = "0.4.0"
description = "Markdown formatter with configurable line length"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
formdt = "formdt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "coverall>=1.0.5",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
