[project]
name = "formdt"
version = "0.6.0"
description = "An opinionated markdown formatter"
readme = "README.md"
requires-python = ">=3.13"

[project.urls]
Repository = "https://github.com/sanchitram1/formdt.git"

[project.scripts]
formdt = "formdt.cli:main"

[dependency-groups]
dev = [
    "coveralls>=4.0.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
minversion = "9.0"
addopts = ["-ra", "-q", "--cov", "--cov-report=term-missing"]
python_files = ["test_*.py", "*_test.py"]

[tool.coverage.run]
source = [
    "src"
]
omit = [
    "*/__init__.py",
    "tests/*.py"
]

[tool.coverage.report]
show_missing = true

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true
